tests/fail/struct_attr_2.rs
use salak::*;

#[derive(Debug, FromEnvironment)]
#[salak(name = "xxx")]
pub struct FailEnum {}

fn main() {}
