tests/fail/struct_attr_2.stderr
error: proc-macro derive panicked
 --> $DIR/struct_attr_2.rs:3:17
  |
3 | #[derive(Debug, FromEnvironment)]
  |                 ^^^^^^^^^^^^^^^
  |
  = help: message: Only support prefix
